<resources>
    <string name="app_name">delivery</string>
    <string name="delivery_icon">delivery icon</string>
    <string name="favourite_icon">favourite icon</string>
    <string name="retry">Retry</string>
    <string name="my_deliveries">My Deliveries</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="goods_to_deliver">Goods to deliver</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="add_to_fav">Add to Favorite</string>
    <string name="remove_from_fav">Remove from Favorite</string>
</resources>